--- a/backend/package.json
+++ b/backend/package.json
@@ -13,12 +13,14 @@
     "@fastify/cors": "^9.0.1",
     "fastify": "^4.26.0",
     "node-cron": "^4.2.1",
+    "pg": "^8.11.3",
     "viem": "^2.21.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
     "@types/node-cron": "^3.0.11",
+    "@types/pg": "^8.10.9",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3"
   }
